# ActivateTracker

./: .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml
app/: auth.py  config.py  db.py  main.py  poller.py  scraper.py  security.py  streak.py
app/routes/: admin.py  auth_routes.py  public.py
app/static/: app.css  app.js
app/templates/: admin.html  base.html  edit_player.html  index.html  login.html
app/tools/: hashpw.py
tests/: test_poller.py  test_scraper.py  test_streak.py
tests/fixtures/: gmebagholder_langley.html
