[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "activate-tracker"
version = "0.1.0"
description = "Self-hosted tracker for Activate (playactivate.com) player scores."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "httpx==0.28.1",            # used by FastAPI TestClient
    "curl_cffi==0.7.4",         # outbound polling - impersonates Chrome TLS to bypass Cloudflare
    "jinja2==3.1.4",
    "python-multipart==0.0.20",
    "itsdangerous==2.2.0",
    "bcrypt==4.2.1",
    "PyYAML==6.0.2",
    "pydantic==2.10.4",
    "APScheduler==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
